# aurora

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/aurora/: __init__.py  api.py  client.py  schemas.py  ui.py
tests/: test_api.py  test_client.py  test_schemas.py
